feat(faas-gateway): complete protobuf specs for functions domain
